--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
 <div class="child row">
-  <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+  <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     <div class="blog-text">
       <p class="left"><strong>【タイトル】</strong><%= @topic.title %></p>
       <p class="left"><strong>【内　　容】</strong><%= @topic.content %></p>
