--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Exam3</title>
+  <title>horsebook</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -55,7 +55,7 @@
 <%= yield %>
 
 <footer>
-  <p>© 2016 Copyright horsebook.</p>
+  <p>© 2016 horsebook.</p>
 </footer>
 
 </body>
