--- a/app/views/topics/confirm.html.erb
+++ b/app/views/topics/confirm.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     
-    <h2>以下の内容で、送信する。</h2>
+    <h2>以下の内容で投稿する</h2>
 
     <%= form_for(@topic) do |f| %>
       <%= f.hidden_field :title %>
