--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
 
-    <h2>ブログを編集する</h2>
+    <h2>トピックを編集</h2>
 
     <%= render 'form' %>
 
