--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,11 +1,11 @@
 body {
-
+  background-color:#E9EBEE;
 }
 
 header {
   width: 100%;
-  background-color:#2c3e50;
-  height: 54px;
+  background-color:#3B5998;
+  height: 55px;
 }
 
 .function {
@@ -46,9 +46,9 @@ header {
 
 footer {
   width: 100%;
-  background-color:#2c3e50;
-  padding: 5px 0px;
-  color: white;
+  background-color:#3B5998;
+  padding: 0px 0px;
+  color: #E9EBEE;
   font-size: 12px;
   position: absolute;
   bottom:0;
@@ -89,7 +89,7 @@ html {
 
 .navbar-default {
     border: 0;
-    padding: 5px 25px;
+    padding: 0px 0px;
 }
 .navbar {
     background-color: transparent;
