--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,34 +3,37 @@
 
     <h2>トピック一覧</h2>
 
-    <%= link_to "トピックを投稿する", new_topic_path, class: 'btn btn-primary' %>
+    <%= link_to "トピックを投稿", new_topic_path, class: 'btn btn-primary' %>
 
     <% @topics.each do |topic| %>
-      <div class="row">
-        
-        <%= link_to topic_path(topic), method: 'get' do %>
+      <% if current_user.friend.include?(topic.user) or (current_user.id == topic.user.id) %>
+        <div class="row">
+          <%= link_to topic_path(topic), method: 'get' do %>
+            <p class="left"><strong><%= topic.content.truncate(20) %></strong></p>
+          <% end %>
 
-          <h4>タイトル:<strong><%= topic.title %></strong></h4>
-        <% end %>
-        
-        <p>本文:<%= topic.content %></p>
-        <div class="prof-img">
-          <p><%= profile_img(topic.user) if profile_img(topic.user) %></p>
+          <p class="right">
+            <%= topic.created_at.strftime("%y/%m/%d %p %l:%M") %>
+            <% if current_user.id == topic.user_id %>
+              <%= link_to "", edit_topic_path(topic.id), class: 'fa fa-pencil-square-o fa-lg' %>
+              <%= link_to "", topic_path(topic.id), method: :delete, data: { confirm: '本当に削除して宜しいですか？'}, class: 'fa fa-trash-o fa-lg' %>
+            <% end%>
+          </p>
+
+          <div class="prof-img">
+            <p><%= link_to profile_img(topic.user), user_path(topic.user.id) %></p>
+          </div>
+
+          <% if topic.user.name.blank? %>
+            <%=  %><br>
+            <%= link_to "未登録", user_path(topic.user.id) %>
+          <% else %>
+            <%= link_to topic.user.name, user_path(topic.user.id) %>
+          <% end %>
         </div>
-        <p>【ユーザID :】<%= topic.user_id %>【ユーザ名 :】
-        <% if topic.user.name.blank? %>
-          <%= "未登録" %><br>
-        <% else %>
-          <%= topic.user.name %><br>
-        <% end %>
-
-        </p>
-
-        <% if current_user.id == topic.user_id %>
-          <%= link_to "", edit_topic_path(topic.id), class: 'fa fa-pencil-square-o fa-lg' %>
-          <%= link_to "", topic_path(topic.id), method: :delete, data: { confirm: '本当に削除して宜しいですか？'}, class: 'fa fa-trash-o fa-lg' %>
-        <% end%>
-      </div>
+      <% else %>
+        
+      <% end %>
     <% end %>
 
   </div>
