--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,19 +1,16 @@
-<section class="main-header">
-</section>
-
-<section class="function">
-    <div class="function-images">
-      <div class="function-image">
-      </div>
-      <div class="function-image">
-      </div>
-      <div class="function-image">
-      </div>
-      <div class="function-image">
-      </div>
+<div class="container">
+  <div class="wrapper col-md-5 col-sm-5 col-xs-5 top_intro " >
+    <div class ="center">horsebookを使うと、馬好きな友達や仲間たちとつながりを深められます。ケータイ、スマートフォンからもアクセスできます。</div>
+    <div class="top_image" >
+      <%= link_to image_tag('top.png'), topics_path %>
+    </div>
   </div>
-</section>
 
-<div id="page-top-btn" class="page-top-btn">
-  <p><a class="move-page-top" id="move-page-top">▲</a></p>
+  <div class="wrapper col-md-5 col-sm-5 col-xs-5 top_signup " >
+    <% if user_signed_in? %>
+      <%= render 'tops/topic' %>
+    <% else %>
+      <%= render 'tops/new' %>
+    <% end%>
+  </div>
 </div>
