--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,6 +4,6 @@
     <%= f.text_field :content, placeholder: "内容", class: "form-control"  %>
   </div>
   <div class="actions">
-    <%= f.submit 'コメントを投稿', class: "btn btn-primary" %>
+    <%= f.submit 'コメント', class: "btn btn-primary" %>
   </div>
 <% end %>
