--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,47 +10,9 @@
 </head>
 <body>
 
-<header>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to "horsebook", root_path, class: "navbar-brand" %>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "お問い合わせ", new_contact_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-            
-              <% if user_signed_in? %>
-                <li><%= link_to "トピック", topics_path %></li>
-                <li><%= link_to 'マイページ', edit_user_registration_path %></li>
-                <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to 'ログイン', new_user_session_path %></li>
-                <li><%= link_to 'サインアップ', new_user_registration_path %></li>
-              <% end %>
-            
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-</header>
+<%= render 'layouts/header' %>
 
-<% if notice.present? %>
-  <p class="notice"><%= notice %></p>
-<% end %>
+<p class="flash"><%= notice %><%= alert %></p>
 
 <%= yield %>
 
