--- a/app/views/topics/confirm.html.erb
+++ b/app/views/topics/confirm.html.erb
@@ -1,17 +1,12 @@
 <div class="container">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     
-    <h2>以下の内容で投稿する</h2>
-
     <%= form_for(@topic) do |f| %>
-      <%= f.hidden_field :title %>
       <%= f.hidden_field :content %>
       <%= f.hidden_field :user_id %>
 
-      <h4>タイトル:<strong><%= @topic.title %></strong></h4>
-      <p>本文:<%= @topic.content %></p>
-      <p>ユーザID :<%= @topic.user_id %></p>
-      <p>【ユーザ名 :】<%= @topic.user.name %></p>
+      <p<strong>内容:<%= @topic.content %></strong></p>
+      <p><%= @topic.user.name %></p>
 
       <%= f.submit "投稿",class: 'btn btn-primary btn-block' %>
 
@@ -19,7 +14,6 @@
 
     <%= form_for(@topic, url: topics_topics_path, method: 'post') do |f| %>
 
-      <%= f.hidden_field :title %>
       <%= f.hidden_field :content %>
       <%= f.hidden_field :user_id %>
 
