--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,10 +3,9 @@
 <div class="child row">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
     <div class="blog-text">
-      <p class="left"><strong>【タイトル】</strong><%= @topic.title %></p>
-      <p class="left"><strong>【内　　容】</strong><%= @topic.content %></p>
+      <p class="left"><strong>【トピック】</strong><%= @topic.content %></p>
       <p class="right">
-        <strong>作成時間:</strong>
+        <strong></strong>
         <%= @topic.created_at.strftime("%y/%m/%d %p %l:%M") %>
       </p>
     </div>
