--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -26,10 +26,7 @@
 
       <div class="field">
         <%= f.label :password %> <i>(変更しない場合は空欄)</i><br />
-        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "新パスワード" %>
-        <% if @minimum_password_length %>
-          <em><%= @minimum_password_length %> 文字以上</em>
-        <% end %>
+        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "新パスワード（6文字以上）" %>
       </div>
 
       <div class="field">
@@ -38,7 +35,7 @@
 
       <div class="field">
         <%= profile_img(@user) if profile_img(@user) %>
-        <%= f.file_field :avatar, class: 'btn btn-default btn-sm btn-default' %>
+        <%= f.file_field :avatar, class: 'btn btn-primary btn-sm btn-primary' %>
         <%= f.hidden_field :avatar_cache %>
       </div>
 
