--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -10,7 +10,39 @@
     <% if user_signed_in? %>
       <%= render 'tops/topic' %>
     <% else %>
-      <%= render 'tops/new' %>
+
+      <h3>サインアップ</h3>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_messages! %>
+
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
+        </div>
+
+        <!-- 名前入力用のフィールドを追加 -->
+        <div class="field">
+          <%= f.text_field :name, class: "form-control", placeholder: "ニックネーム" %><br>
+        </div>
+
+        <div class="field">
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> 文字以上)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード(6文字以上)" %>
+        </div>
+
+        <div class="field">
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "サインアップ", class: "btn btn-primary btn-block" %>
+        </div>
+      <% end %>
+
+      <%= render 'tops/links' %>
+
     <% end%>
   </div>
 </div>
