--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,27 @@
   <% @users.each do |user| %>
       <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
         <div class="prof-img">
-          <%= link_to profile_img(user), user_path(user.id) %>
+          <% if current_user.id == user.id %>
+            <%= link_to profile_img(user), user_path(user.id) %>
+          <%else %>
+            <%= profile_img(user) %>
+          <% end %>
         </div>
 
-        <% if user.name.blank? %>
-          <%= link_to "名前：未登録", user_path(user.id) %><br>
+        <% if current_user.id == user.id %>
+          <% if user.name.blank? %>
+            <%= link_to "名前：未登録", user_path(user.id) %><br>
+          <% else %>
+            <%= link_to user.name, user_path(user.id) %><br>
+          <% end %>
         <% else %>
-          <%= link_to user.name, user_path(user.id) %><br>
+          <% if user.name.blank? %>
+            <%= "名前：未登録" %><br>
+          <% else %>
+            <%= user.name %><br>
+          <% end %>
         <% end %>
+
 
         <% unless current_user.id == user.id %>
           <%= render 'users/mypages/follow_form', user: user %>
