--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,56 +1,56 @@
 <div class="container">
   <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
 
-    <h3><%= resource_name.to_s.humanize %>情報編集</h3>
+  <h3><%= resource_name.to_s.humanize %>情報編集</h3>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= f.error_messages! %>
-
-      <div class="field">
-        <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %><br>
-      </div>
-  
-      <!-- 名前入力用のフィールドを追加 -->
-      <div class="field">
-        <%= f.text_field :name, class: "form-control", placeholder: "ニックネーム" %>
-      </div>
-  
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-
-      <div class="field">
-        <% @user.provider.blank? %>
-	  <%= f.label :current_password %> <i>(変更する場合は現在のパスワード)</i><br />
-          <%= f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "現在のパスワード" %>
-        <% end %>
-      </div>
-
-      <div class="field">
-        <%= f.label :password %> <i>(変更しない場合は空欄)</i><br />
-        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "新パスワード（6文字以上）" %>
-      </div>
-
-      <div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "新パスワード（確認）" %><br>
-      </div>
-
-      <div class="field">
-        <%= profile_img(@user) if profile_img(@user) %>
-        <%= f.file_field :avatar, class: 'btn btn-primary btn-sm btn-primary' %>
-        <%= f.hidden_field :avatar_cache %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "更新", class: 'btn btn-default btn-sm btn-success' %>
-      </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_messages! %>
+    
+    <div class="field">
+      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %><br>
+    </div>
+			      
+    <!-- 名前入力用のフィールドを追加 -->
+    <div class="field">
+      <%= f.text_field :name, class: "form-control", placeholder: "ニックネーム" %>
+    </div>
+				    
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <h4>アカウント削除</h4>
+    <div class="field">
+      <% if @user.provider.blank? %>
+	<%= f.label :current_password %> <i>(変更する場合は現在のパスワード)</i><br />
+	<%= f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "現在のパスワード" %>
+      <% end %>
+    </div>
 
-    <p>Unhappy? <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: 'btn btn-default btn-sm btn btn-danger' %></p>
+    <div class="field">
+      <%= f.label :password %> <i>(変更しない場合は空欄)</i><br />
+      <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "新パスワード（6文字以上）" %>
+    </div>
 
-    <%= link_to "戻る", :back %>
+    <div class="field">
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "新パスワード（確認）" %><br>
+    </div>
+
+    <div class="field">
+      <%= profile_img(@user) if profile_img(@user) %>
+      <%= f.file_field :avatar, class: 'btn btn-primary btn-sm btn-primary' %>
+      <%= f.hidden_field :avatar_cache %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "更新", class: 'btn btn-default btn-sm btn-success' %>
+    </div>
+  <% end %>
+
+  <h4>アカウント削除</h4>
+
+  <p>Unhappy? <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当に削除してよろしいですか？" }, method: :delete, class: 'btn btn-default btn-sm btn btn-danger' %></p>
+
+  <%= link_to "戻る", :back %>
 
   </div>
 </div>
