fixed notification link to comments

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -27,7 +27,9 @@
             <span class="label label-pill label-default"><%= display_read_status(notification.read) %></span>
             <p>
               <%= receive_user(notification) %>さんから
-              <small class="dropdown">メッセージが届いています。:<%= notification.message.body %></small>
+	      <small class="dropdown">メッセージが届いています。:
+		<%= link_to notification.message.body, conversation_messages_path(notification.message.conversation) %>
+              </small>
             </p>
             <p class="palette-paragraph text-right">
               <small class="dropdown">
