--- a/app/views/notice_mailer/sendmail_contact_admin.html.erb
+++ b/app/views/notice_mailer/sendmail_contact_admin.html.erb
@@ -1,5 +1,5 @@
 <h2>exam3からお問い合わせが届きました！</h2>
 
-<p>name: <%= @contact.name %></p>
-<p>email: <%= @contact.email %></p>
-<p>content: <%= @contact.content %></p>
+<p>お名前: <%= @contact.name %></p>
+<p>メールアドレス: <%= @contact.email %></p>
+<p>お問い合わせ内容: <%= @contact.content %></p>
